Tried to fix issue with city names overlapping on android

--- a/src/stylesheets/hotelInfo.scss
+++ b/src/stylesheets/hotelInfo.scss
@@ -12,8 +12,7 @@
   justify-content: center;
   .localCity {
     text-align: center;
-    padding: 10px;
-    margin: 5px;
+    padding: 15px;
   }
   .localHotel {
     text-align: center;
